# HaskellBf

./: bf.cabal
src/: Lib.hs  Op.hs  State.hs  Tape.hs
test/: Spec.hs
